--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,11 @@
-
+<div id="title">
+    <h1>HELLO WORLD AND ALL WHO INHABIT IT </h1>
+    <h2>Spongebob Is lit</h2>
+  </div>
+  <div id="nav">
+    <ul>
+      <li>Home<li>
+      <li><a href="/blog">Blog</a><li>
+      <li>Contact<li></>
+      </ul>
+  </div>
