--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,13 @@
-<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+	
+	{% include head.html %}
+	{% include header.html %}
+	
+	<body>
+		
+	</body>
+	
+	{% include footer.html %}
 			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:RobertoIsCool@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/RobertoPerez">github.com/RobertoPerez</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+</html>
