--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,9 @@
 	
 	{% include head.html %}
 	{% include header.html %}
-	
-	<body>
-		
-	</body>
-	
+	<div class="content-wrapper">
+	{{content}}
+	</div>
 	{% include footer.html %}
 			
 </html>
