--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="/"Home></a><li>
+      <li><a href="/">Home</a><li>
       <li><a href="/blog">Blog</a><li>
       <li>Contact<li></>
       </ul>
