--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,9 @@ body img {
   display: inline;
   color: white;
 }
-
+#homething {
+  height: 100px; 
+}
 #homething h1{
   text-align: center; 
 }
