--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	{% include header.html %}
 	<div class="content-wrapper">
 	{% for post in site.posts%}
-		<h2>{{post.title}}</h2>
+		<h2>{{post.date}}{{post.title}}</h2>
 	{%endfor%}
 	{{content}}
 	</div>
