--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ body img {
 }
 
 #homething h1{
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center; 
 }
 
@@ -106,5 +106,6 @@ body img {
 #excerpt {
   padding: 10px; 
   border:5px dashed black;
+  background-color: white;
   margin: 5px;
 }
