--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="foot">
     <ul>
-      <li>Comment</li>
-      <li>Subscribe</li>
+      <li><a href="/comment">Comment</a></li>
+      <li><a href="/sub">Subscribe</a></li>
       </ul>
     </div>
 </div>
