--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@ body img {
   background-color: #000144;
 }
 
+#foot a{
+  color: white; 
+  text-decoration: none;
+}
 #foot li {
   list-style-type:none;
   margin: 5px;
