--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ body img {
   background-color: white;
   margin: 5px;
 }
-#SUBSRIBES {
+#SUBSCRIBES {
  text-align: center;
  font-size: 100px;
  padding: 20px;
